--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function hnceTimer(){
   <div style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;text-align:center;"><img src="https://xwss6.v.zzu.edu.cn/yan2vm/6/6F3F2E56C26B49368BB870D0AC9B39D1.jpg?sid=201216232650200997" style="width:350px;border:0px;" /></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">信息工程学院　张权</span><br />　通行信息：主校区小门东二门.入口<br />　出入身份：郑州大学师生<br />　<span style="color:#f00">提醒：未检索到你今天的出校记录</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>  
   
 </div>
-
+<a href=./郑州大学数据中台2020.html>东门</a>
 <div style="width:1px;height:1px;">
   <iframe name="zzj_fun_426" id="zzj_fun_426s" src="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/getsomething?ptopid=sFE9E1423C3A44006BFE93946CBEA946F&sid=201216232650341219" marginwidth="0" marginheight="0" height="100%"
     width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
