--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>郑州大学数据中台2020</title>
 </head>
 <body>
-<a href=./郑州大学数据中台2020.html>东门</a>
-  <a href=./郑州大学数据中台20202.html>东二门</a>
+  <p><a href=./郑州大学数据中台2020.html>东二门</a></p>
+  <p><a href=./郑州大学数据中台20202.html>东门</a></p>
 </body>
 </html>
