--- a/郑州大学数据中台20202.html
+++ b/郑州大学数据中台20202.html
@@ -16,7 +16,7 @@
     document.getElementById("zzj_fun_426s").src=us;
   }
   var timeID=0;
-var tt1=423;
+var tt1=598;
 tt2=0;
 tt3=0;
 var timeID=setInterval("hnceTimer()",1000);
@@ -33,7 +33,13 @@ function hnceTimer(){
 <body>
 <form method="POST" name="myform52" action="">
 <div id="bak_0">  
-  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316b.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=sFE9E1423C3A44006BFE93946CBEA946F"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;">12月17日 10:17　</span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">7分03秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
+  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316b.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=sFE9E1423C3A44006BFE93946CBEA946F"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;"><script>
+var d = new Date();
+document.write(d.getMonth()+1 +"月"+d.getDate()+"日");
+</script> </span> <span style="font-size:16px;color:#a0a;"> <script>
+var d = new Date();
+document.write(d.getHours() +":"+d.getMinutes()+" ");
+</script></span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分58秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
   <div style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;text-align:center;"><img src="https://xwss6.v.zzu.edu.cn/yan2vm/6/6F3F2E56C26B49368BB870D0AC9B39D1.jpg?sid=201216232650200997" style="width:350px;border:0px;" /></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">信息工程学院　张权</span><br />　通行信息：主校区大门东门.入口<br />　出入身份：郑州大学师生<br />　<span style="color:#f00">提醒：未检索到你今天的出校记录</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>  
   
 </div>
