--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <p><a href=./郑州大学数据中台20202.html>东门</a></p>
   <p><a href=./郑州大学数据中台zhu.html>朱阿静</a></p>
 <p><a href=./郑州大学数据中台cheng.html>程君进</a></p>
+  <p><a href=./boy/fan.html>范一鸣</a></p>
 </body>
 </html>
