--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>郑州大学数据中台2020</title>
 </head>
 <body>
-  <p><a href=./郑州大学数据中台2020.html>东二门</a></p>
-  <p><a href=./郑州大学数据中台20202.html>东门</a></p>
+  <p><a href=./zq东二门.html>东二门</a></p>
+  <p><a href=./zq东门.html>东门</a></p>
   <p><a href=./郑州大学数据中台zhu.html>朱阿静</a></p>
 <p><a href=./郑州大学数据中台cheng.html>程君进</a></p>
   <p><a href=./boy/fan.html>范一鸣</a></p>
