--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
   <p><a href=./boy/zq东二门.html>zq东二门</a></p>
   <p><a href=./boy/zq东门.html>zq东门</a></p>
-  <p><a href=./girl/郑州大学数据中台zhu.html>朱阿静</a></p>
-<p><a href=./girl/郑州大学数据中台cheng.html>程君进</a></p>
+  <p><a href=./girl/zhuajing.html>朱阿静</a></p>
+<p><a href=./girl/chengjunjin.html>程君进</a></p>
   <p><a href=./boy/fan.html>范一鸣</a></p>
 </body>
 </html>
