--- a/boy/zq出门.html
+++ b/boy/zq出门.html
@@ -38,7 +38,7 @@ var d = new Date();
 document.write(d.getMonth()+1 +"月"+d.getDate()+"日");
 </script> </span> <span style="font-size:16px;color:#a0a;"> <script>
 var d = new Date();
-document.write(d.getHours() +":"+d.getMinutes()+" ");
+document.write(d.getHours() +":"+d.getMinutes().padStart(2,'0')+" ");
 </script></span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分58秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
   <div style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;text-align:center;"><img src="https://xwss6.v.zzu.edu.cn/yan2vm/6/6F3F2E56C26B49368BB870D0AC9B39D1.jpg?sid=201216232650200997" style="width:350px;border:0px;" /></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">信息工程学院　张权</span><br />　通行信息：主校区大门东门.出口<br />　出入身份：郑州大学师生<br />　<span style="color:#f00">提醒：未检索到你今天的出校记录</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>  
   
